fet: added User model for mongodb connection, and created new validation mmiddleware for API V2
